Prevent the grid box cells from stretching
I implemented this feature by setting the min height and width of the
grid element to be 0 and grid-template column and rows to take 1fr space

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,11 @@ code {
 
 .box-grid {
   display: grid;
-  grid-template-columns: auto auto auto;
+
+  /* Learned that 1fr is more robust than the auto */
+  /* The new fr unit represents a fraction of the available space in the grid container. */
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   
   /* Make the perfect square by keeping aspect ratio of 1 */
   width: 40%;
@@ -50,6 +54,11 @@ code {
   padding: 3.5rem;
   text-align: center;
   border: 1px solid black;
+  /* border-radius: 20%; */
+
+  /* Prevent grid items from stretching */
+  min-width: 0;
+  min-height: 0;
 }
 
 .box-cell:hover {
